# rust_ime

./: .gitignore  BUGS.md  BUG_REPORT.md  Cargo.toml  FUTURE_ROADMAP.md  GEMINI.md  README.md  TODO.md  analyze_aux.py  bug_report.md  bug_report.txt  config.json  dict.data  dict.index  fix_ime_bug.sh  gemini.md  generate_en_char.py  install.sh  ngram.json  process_dicts.py  uniqueness_report.txt
data/: chinese.data  chinese.index  dict.index  japanese.data  japanese.index  ngram.unigram
data/chinese/: ngram.unigram  trie.data
data/japanese/: trie.data  trie.index
dicts/: basic_tokens.txt  basic_words.json  chars.json  level-1_char_en_sorted.json
dicts/archive/character/: level-3_char_en.json
dicts/chinese/: syllables.txt
dicts/test/: dict_new.json  level-1_char_en_toned.json
n-gram-model/: ngram1.json
n-gram-model/traningmatarial/: review_list.txt
src/: config.rs  gui.rs  ime.rs  ime.rs_head  main.rs  main.rs_new  ngram.rs  path_test.rs  tray.rs  trie.rs  vkbd.rs  web.rs
src/engine/: mod.rs  ngram.rs  processor.rs  segmenter.rs  trie.rs
src/platform/: mod.rs  traits.rs
src/ui/: gui.rs  mod.rs  tray.rs  web.rs
static/: index.html
tools/: capitalize_en.py  clean_en_defs.py  clean_en_translations.py  clean_garbled.py  clean_pseudo_words.py  export_multi.py  export_multi_json.py  export_review_list.py  extract_basic_tokens.py  extract_basic_words.py  extract_syllables.py  find_multi_category.py  generate_en_char.py  json_to_text.py  merge_chars.py  reorder_chars_by_freq.py  set_common_category.py  translate_all_local.py  word_discovery_v3.py
(+134 files in other folders)
