[package]
name = "rust-ime"
version = "0.1.0"
edition = "2021"

[dependencies]
evdev = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
notify-rust = "4"
arboard = "3.2"
users = "0.11"
signal-hook = "0.4.1"
daemonize = "0.5"
libc = "0.2.180"
ksni = "0.2.1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rust-embed = "8.2"
tower-http = { version = "0.5", features = ["full"] }
mime_guess = "2.0"
atty = "0.2"
