[package]
name = "rust-ime"
version = "0.1.0"
edition = "2021"

[dependencies]
evdev = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
arboard = "3.2"
signal-hook = "0.4.1"
daemonize = "0.5"
libc = "0.2.180"
tokio = { version = "1", features = ["full"] }

# GTK 3 依赖
gtk = { version = "0.15", features = ["v3_24"] }
glib = "0.15"
gdk = "0.15"
pango = "0.15"